--- a/src/app/timeline.css
+++ b/src/app/timeline.css
@@ -58,4 +58,7 @@
     .vertical-timeline-element-icon{
       margin-left: auto !important;
     }
+    .vertical-timeline{
+      width: 90% !important;
+    }
   }
